# ti-pybind

./: .gitignore  CMakeLists.txt
include/: calculator.h
src/cpp/: CMakeLists.txt  calculator.cpp  play.cpp
src/python/: CMakeLists.txt  calculator.cpp
